--- a/config/hybrid_orb_superglue.yaml
+++ b/config/hybrid_orb_superglue.yaml
@@ -1,25 +1,30 @@
 # ============================================================================
-# Classical Visual Odometry Pipeline: ORB + kNN
+# Hybrid Visual Odometry Pipeline: ORB + SuperGlue
 # ============================================================================
+# This pipeline isolates the benefit of a deep matcher (SuperGlue) with a 
+# classical detector (ORB) to evaluate the contribution of learned matching.
 
 # ----------------------------------------------------------------------------
 # Detector Configuration
 # ----------------------------------------------------------------------------
 detector: orb
 detector_params:
-  nfeatures: 2000
+  nfeatures: 2000  # Maximum number of ORB keypoints to detect
 
 # ----------------------------------------------------------------------------
 # Matcher Configuration
 # ----------------------------------------------------------------------------
-matcher: knn
+matcher: superglue  # Learned matcher (SuperGlue)
 matcher_params:
-  ratio: 0.75
+  weights_type: indoor  # "indoor" for TUM (ScanNet-trained) or "outdoor" for KITTI (MegaDepth-trained)
+  sinkhorn_iterations: 20  # Number of Sinkhorn iterations for optimal transport
+  match_threshold: 0.2  # Matching confidence threshold (higher = fewer but better matches, 0.2 is standard)
+  use_cuda: true  # Use GPU if available
 
 # ----------------------------------------------------------------------------
 # Masking Configuration
 # ----------------------------------------------------------------------------
-masking: none
+masking: none  # No masking for this pipeline
 
 # ----------------------------------------------------------------------------
 # Dataset Configuration (can be overridden via CLI: --dataset, --sequence)
@@ -32,16 +37,16 @@ data_root: data/TUM
 # Pose Estimation Parameters
 # ----------------------------------------------------------------------------
 pose_estimation:
-  ransac_threshold: 1.0
-  ransac_confidence: 0.999  # Must be > 0 and < 1
-  min_matches: 8
+  ransac_threshold: 1.0  # RANSAC threshold in pixels (typical: 1.0-3.0)
+  ransac_confidence: 0.999  # RANSAC confidence level (must be > 0 and < 1)
+  min_matches: 8           # Minimum number of matches required for pose estimation
 
 # ----------------------------------------------------------------------------
 # Evaluation Parameters
 # ----------------------------------------------------------------------------
 evaluation:
-  max_time_diff: 0.02
-  rpe_delta: 1
+  max_time_diff: 0.02  # Maximum time difference (seconds) for timestamp matching
+  rpe_delta: 1         # Frame interval for relative pose error computation
 
 # ----------------------------------------------------------------------------
 # Output Configuration
